<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joanjantz_lee.greenhouse.MainActivity">


    <TextView
        android:id="@+id/minText"
        android:layout_width="60dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/tvTemp"
        android:text="min"
        android:gravity="center_horizontal|bottom"
        />

    <TextView
        android:id="@+id/maxText"
        android:layout_width="60dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/minText"
        android:text="max"
        android:gravity="center_horizontal|bottom"
        />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:text="Temperature:"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/minText"
        />

    <TextView
        android:id="@+id/luminText"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:text="Luminosity:"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/tempText"
        app:layout_constraintLeft_toRightOf="parent"/>

    <TextView
        android:id="@+id/humidText"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:text="Humidity:"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/luminText"
        app:layout_constraintLeft_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:text="--"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center_vertical|left"
        app:layout_constraintLeft_toRightOf="@+id/tempText"
        app:layout_constraintTop_toBottomOf="@+id/minText"
        />


    <TextView
        android:id="@+id/tvLumin"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:text="--"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center_vertical|left"
        app:layout_constraintLeft_toRightOf="@+id/luminText"
        app:layout_constraintTop_toBottomOf="@+id/tvTemp"/>

    <TextView
        android:id="@+id/tvHumid"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:text="--"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center_vertical|left"
        app:layout_constraintLeft_toRightOf="@+id/humidText"
        app:layout_constraintTop_toBottomOf="@+id/tvLumin"
        />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvHumid"
        app:layout_constraintLeft_toRightOf="parent"
        android:background="#496D3C"
        android:textColor="#FFFFFF"
        android:onClick="setValues"

        android:text="Update Thresholds"
        android:layout_marginTop="15dp"
     />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginBottom="25dp"
        />

    <EditText
        android:id="@+id/minTempInput"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/tvTemp"
        app:layout_constraintTop_toBottomOf="@+id/minText"/>

    <EditText
        android:id="@+id/maxTempInput"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/minTempInput"
        app:layout_constraintTop_toBottomOf="@+id/minText"/>

    <EditText
        android:id="@+id/minLuminosityInput"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/tvLumin"
        app:layout_constraintTop_toBottomOf="@+id/minTempInput"/>

    <EditText
        android:id="@+id/maxLuminosityInput"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/minLuminosityInput"
        app:layout_constraintTop_toBottomOf="@+id/minTempInput"/>

    <EditText
        android:id="@+id/minHumidityInput"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/tvHumid"
        app:layout_constraintTop_toBottomOf="@+id/minLuminosityInput"/>

    <EditText
        android:id="@+id/maxHumidityInput"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/minHumidityInput"
        app:layout_constraintTop_toBottomOf="@+id/minLuminosityInput"/>

</android.support.constraint.ConstraintLayout>